apps/talk-hpb/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: talk-signaling-strip
  namespace: talk-hpb
spec:
  stripPrefix:
    prefixes:
      - /standalone-signaling
